--- a/Organ.AI/Base.lproj/Main.storyboard
+++ b/Organ.AI/Base.lproj/Main.storyboard
@@ -1105,7 +1105,7 @@ You are free Today!</string>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jta-Rc-uGo">
-                                <rect key="frame" x="40" y="702" width="334" height="120"/>
+                                <rect key="frame" x="40" y="602" width="334" height="220"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvt-Bw-Nca">
                                         <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
@@ -1122,6 +1122,21 @@ You are free Today!</string>
                                         <state key="normal" title="Login"/>
                                         <connections>
                                             <segue destination="TZx-oi-f5P" kind="show" id="UnY-cx-2IA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jG7-4Q-eIa">
+                                        <rect key="frame" x="0.0" y="140" width="334" height="30"/>
+                                        <state key="normal" title="Google Sign In"/>
+                                        <connections>
+                                            <action selector="SignInwithGoogle:" destination="fD3-M6-rJE" eventType="touchUpInside" id="OSn-dQ-nT6"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYD-25-Bei">
+                                        <rect key="frame" x="0.0" y="190" width="334" height="30"/>
+                                        <state key="normal" title="Get Calendar"/>
+                                        <connections>
+                                            <action selector="SignInwithGoogle:" destination="fD3-M6-rJE" eventType="touchUpInside" id="XCd-a8-kCg"/>
+                                            <action selector="getUserCalendar:" destination="fD3-M6-rJE" eventType="touchUpInside" id="Spq-Ez-WO1"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1154,6 +1169,7 @@ You are free Today!</string>
                     <navigationItem key="navigationItem" id="tV2-OF-Oay"/>
                     <connections>
                         <outlet property="loginButton" destination="urZ-mH-LVE" id="sas-gK-H53"/>
+                        <outlet property="login_google" destination="jG7-4Q-eIa" id="iiG-g2-dUE"/>
                         <outlet property="signUpButton" destination="bvt-Bw-Nca" id="EmT-a8-D78"/>
                         <outlet property="videoBackgroundView" destination="tPl-r2-YQ1" id="HIB-2T-sLt"/>
                         <segue destination="l1i-wd-kYJ" kind="show" id="nJD-F9-smF"/>
@@ -1368,7 +1384,7 @@ You are free Today!</string>
         <!--Choose Option-->
         <scene sceneID="hL2-ph-heF">
             <objects>
-                <viewController storyboardIdentifier="chooseOption" title="Choose Option" id="Gej-0m-dQZ" customClass="ChooseExport" customModule="Calendar_to_Calendar" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="chooseOption" title="Choose Option" id="Gej-0m-dQZ" customClass="ChooseExport" customModule="Organ_AI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gzr-mw-OkH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
